SFDC DevOps Test/src/objects/Work_Assignment__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents the assignment of a specific unit of work to a project team member.</description>
    <fields>
        <fullName>Assignment__c</fullName>
        <description>Different types of assignments</description>
        <label>Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Work Requirement created date.</description>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Requirement Name</description>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <description>Awaiting requirement specification for the field.</description>
        <label>Project Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA/Testing Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA/Testing Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related request with the work assignment</description>
        <label>Requirement #</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Work Assignment</relationshipLabel>
        <relationshipName>Work_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the work asignment</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assignment__c</columns>
        <columns>Name__c</columns>
        <columns>Requirement_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>WA_Create_Date</fullName>
        <active>false</active>
        <description>Work Assignment Creation Date must be greater than Today.</description>
        <errorConditionFormula>Complete_Date__c  &lt; TODAY()</errorConditionFormula>
        <errorMessage>Creation Date must be greater than Today.</errorMessage>
    </validationRules>
</CustomObject>